Fix horizontal scrolling

--- a/smallslive/static/sass/components/_event-row.scss
+++ b/smallslive/static/sass/components/_event-row.scss
@@ -191,6 +191,10 @@ $event-row-padding: 3.5vw;
   @media (min-width: $screen-sm-max) {
     padding-left: $content-left-padding;
   }
+
+  @media (max-width: $screen-sm-max) {
+    overflow: auto;
+  }
 }
 
 .event-display {
