--- a/smallslive/static/sass/pages/_home.scss
+++ b/smallslive/static/sass/pages/_home.scss
@@ -81,12 +81,6 @@ div.event-strip {
     overflow: hidden;
     position: relative;
     width: auto;
-
-    @media (max-width: $screen-sm-max) {
-      .event-row {
-        overflow: auto;
-      }
-    }
   }
 }
 #a-z-search {
